# techllama-wrapper

./: .editorconfig  .gitignore  README.md  bun.lockb  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
